--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gatsby-source-filesystem": "^2.0.23",
     "gatsby-source-graphql": "^2.0.15",
     "gatsby-transformer-sharp": "^2.1.15",
+    "graphcms-image": "^1.1.0-beta4",
     "node-sass": "^4.11.0",
     "path": "^0.12.7",
     "prop-types": "^15.7.2",
