--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-helmet": "^5.2.0",
     "react-intl": "^2.8.0",
     "react-slick": "^0.23.2",
+    "react-typed": "^1.1.2",
     "slick-carousel": "^1.8.1",
     "styled-components": "^4.2.0"
   },
