--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^16.8.4",
     "react-helmet": "^5.2.0",
     "react-intl": "^2.8.0",
+    "react-modal": "^3.8.1",
     "react-slick": "^0.23.2",
     "react-typed": "^1.1.2",
     "slick-carousel": "^1.8.1",
