--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "browser-lang": "^0.0.1",
     "classnames": "^2.2.6",
     "flat": "^4.1.0",
+    "formik": "^1.5.7",
     "gatsby": "^2.1.24",
     "gatsby-image": "^2.0.31",
     "gatsby-plugin-manifest": "^2.0.22",
