--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-slick": "^0.23.2",
     "react-typed": "^1.1.2",
     "slick-carousel": "^1.8.1",
-    "styled-components": "^4.2.0"
+    "styled-components": "^4.2.0",
+    "wow.js": "^1.2.2"
   },
   "keywords": [
     "gatsby"
